components/IsFavorite/IsFavorite.module.css
.movieContainer {
  background-color: rgb(40, 42, 58);
  color: rgb(198, 151, 73);
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.title {
  margin: 0;
  padding: 1rem;
  text-align: center;
  background-color: rgb(115, 95, 50);
  color: rgb(0, 0, 0);
  border-radius: 10px;
}

.poster {
  border-radius: 10px;
  border: 5px solid rgb(0, 0, 0);
  display: block;
  margin: 20px auto;
  width: 50%;
  height: auto;
}

.toggleButtonContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.toggleButton {
  width: 50vw;
  height: auto;
  padding: 2em;
}

.directorTitle {
  /* margin: 20px 10px; */
  margin-top: 20px;
  margin-bottom: 0;
  margin-left: 10px;
  margin-right: 10px;
  align-self: flex-start;
}

.directorInfo {
  margin: 0 10px;
  align-self: flex-start;
}

.castTitle {
  /* margin: 20px 10px; */
  margin-top: 20px;
  margin-bottom: 0;
  margin-left: 10px;
  margin-right: 10px;
  align-self: flex-start;
}

.castInfo {
  margin: 0 10px;
  align-self: flex-start;
}

.genresTitle {
  /* margin: 20px 10px; */
  margin-top: 20px;
  margin-bottom: 0;
  margin-left: 10px;
  margin-right: 10px;
  align-self: flex-start;
}

.genresText {
  margin: 0 10px;
  align-self: flex-start;
}

.synopsisTitle {
  /* margin: 20px 10px; */
  margin-top: 20px;
  margin-bottom: 0;
  margin-left: 10px;
  margin-right: 10px;
  align-self: flex-start;
}

.synopsisText {
  margin: 0 10px;
}

.releaseTitle {
  /* margin: 20px 10px; */
  margin-top: 20px;
  margin-bottom: 0;
  margin-left: 10px;
  margin-right: 10px;
  align-self: flex-start;
}

.releaseDate {
  margin: 0 10px;
  align-self: flex-start;
}

.languageTitle {
  /* margin: 20px 10px; */
  margin-top: 20px;
  margin-bottom: 0;
  margin-left: 10px;
  margin-right: 10px;
  align-self: flex-start;
}

.languageInfo {
  margin: 0 10px;
  align-self: flex-start;
}

.streamingContainer {
  display: flex;
  flex-direction: column;
}

.streamingTitle {
  /* margin: 20px 10px; */
  margin-top: 20px;
  margin-bottom: 0;
  margin-left: 10px;
  margin-right: 10px;
  /* align-self: flex-start; */
}

.streamingList {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.streamingInfo {
  display: flex; /* Enable flexbox layout */
  flex-direction: row;
  align-items: center; /* Center the items horizontally */
  justify-content: center; /* Center the items vertically */
  flex-wrap: wrap;
}

